syntax = "proto3";
package wl_keys;

import "google/protobuf/empty.proto";

service Daemon {
    rpc SendKey (Key) returns (google.protobuf.Empty);

    rpc AutoEnable (google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc AutoDisable (google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc AutoToggle (google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc AutoQuery (google.protobuf.Empty) returns (AutoStatus);

    rpc ModPress (ModMsg) returns (google.protobuf.Empty);
    rpc ModRelease (ModMsg) returns (google.protobuf.Empty);
    rpc ModToggle (ModMsg) returns (google.protobuf.Empty);
    rpc ModQuery (ModMsg) returns (ModStatus);

    rpc Stop (google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc GetProtocols (google.protobuf.Empty) returns (Protocols);
}

message Key {
    uint32 key = 1;
}

message AutoStatus {
    bool enabled = 1;
}

enum Modifier {
    SHIFT = 0;
    CTRL = 1;
    ALT = 2;
    CMD = 3;
}

message ModMsg {
    Modifier modifier = 1;
}

message ModStatus {
    bool pressed = 1;
}

message Protocols {
    repeated string protocols = 1;
}

